[package]
name = "token-acl-interface"
version = { workspace = true }
description = "Interface library for Token ACL account resolution."
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
num-traits = { workspace = true }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
spl-discriminator = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dev-dependencies]
solana-program = { workspace = true }
tokio = { version = "1.45.1", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]