[package]
name = "token-acl"
version = { workspace = true }
description = "The Token ACL program"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
solana-program = { workspace = true }
solana-rent = { workspace = true }
solana-cpi = { workspace = true }
solana-system-interface = { workspace = true }
solana-sysvar = { workspace = true }
solana-pubkey = { workspace = true }
solana-program-error = { workspace = true }
spl-pod = { workspace = true }
spl-token-2022 = { workspace = true }
token-acl-interface = { workspace = true }
bytemuck = { version = "1.21.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "TACLkU6CiCdkQN2MjoyDkVg2yAH9zkxiHDsiztQ52TP"