[package]
name = "token-acl-cli"
version = "0.1.0"
description = "A CLI app to interact with the Token ACL smart contract on solana!"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.31"
solana-clap-v3-utils = "3.0.14"
solana-cli-config = "3.0.14"
solana-client = { workspace = true }
solana-logger = "3.0.0"
solana-remote-wallet = "3.0.14"
solana-sdk = { workspace = true }
spl-token-client = { workspace = true }
tokio = { version = "1", features = ["full"] }
spl-tlv-account-resolution ={ workspace = true }
spl-transfer-hook-interface = "2.1.0"
token-acl-client = { workspace = true, features = ["fetch"] }
token-acl-interface = { workspace = true }
spl-associated-token-account-interface  = { workspace = true }
spl-token-metadata-interface = { workspace = true }
solana-system-interface = { workspace = true }
solana-commitment-config = "3.1.0"

[[bin]]
name = "token-acl-cli"
path = "src/main.rs"