[package]
name = "token-acl-client"
version = { workspace = true }
description = "A rust library for the Token ACL program with generated client code."
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-client = { workspace = true, optional = true }
spl-tlv-account-resolution = { workspace = true }
thiserror = { workspace = true }
borsh = "1.0.0"
token-acl-interface = { workspace = true }
solana-system-interface = { workspace = true }
spl-token-2022-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
solana-program-option = { workspace = true }
solana-program-pack = { workspace = true }

[dev-dependencies]
litesvm = { workspace = true }
solana-program-runtime = { workspace = true }
solana-instruction = { workspace = true }
tokio = { version = "^1.20", features = ["rt-multi-thread", "macros"] }
solana-compute-budget-interface = "3.0.0"
solana-sdk = { workspace = true }

[lib]
doctest = false
crate-type = ["cdylib", "lib"]

[features]
default = []
fetch = ["dep:solana-client"]
serde = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint", "custom-heap", "custom-panic", "anchor", "anchor-idl-build"))',
]
