[package]
name = "always-allow-with-deps-gate-program"
version = "0.1.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
solana-program = { workspace = true }
solana-rent = { workspace = true }
solana-cpi = { workspace = true }
solana-system-interface = { workspace = true }
solana-sysvar = { workspace = true }
solana-program-error = { workspace = true }
spl-discriminator = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
token-acl-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-token-2022-interface = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]