[package]
name = "always-block-gate-program"
version = "0.1.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.9"
solana-program = { workspace = true }
solana-rent = { workspace = true }
solana-cpi = { workspace = true }
solana-system-interface = { workspace = true }
solana-sysvar = { workspace = true }
solana-program-error = { workspace = true }
spl-discriminator = { workspace = true }
spl-pod = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-token-2022 = { workspace = true }
token-acl-interface = { workspace = true }
spl-type-length-value = { workspace = true }
bytemuck = { version = "1.21.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]